﻿v1.5.0.9
- Radionuclides viewer was added;
- Fixed dose point coordinate updating after changing;
- Updated About window content.


v1.5.0.8
- Opportunity to Import/Export bremsstrahlung energy-intensite data;
- Splash screen was added;
- Geometries model was changed;
- Geometries SDK was prepared.


v1.5.0.7
- New logger;
- Geometric progression constrict is up to 40 MFP;
- Improved geometric progression constrict is up to 100 MFP. 


v1.5.0.6
- Corrections in the calculation method are made for a point source;
- Now user can see and set both energy flux of bremsstrahlung and bremsstrahlung photons flux in 'Source' tab;
- Bremsstrahlung energy-intensity section is updated automatically;
- 'Edit' section was added to main menu.

v1.5.0.5
- Interpolation of attenuation, absorption and dose conversion factors is in log scale;
- Interpolation of buildup factors is in half-log scale.


v1.5.0.4
- Database is updated with new materials: Carbon, Copper, Uranium, Water;
- Database is updated with new Taylor buildup coefficients for all materials;
- Materials are renamed to full name.

v1.5.0.3
- Interpolations viewer is introduced


v1.5.0.2
- Fix of geometries evaluation methods