@@ -5,8 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:vm="clr-namespace:BSP.ViewModels"
              xmlns:local="clr-namespace:BSP.Views.MainWindow"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -60,13 +59,15 @@
                                     Width="0.3*"/>
             </DataGrid.Columns>
         </DataGrid>
-        
-        
+
+
         <Grid Grid.Row="2" Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -81,7 +82,7 @@
                     <TextBlock Text="{StaticResource btn_Add}" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
-            
+
             <!--Edit BTN-->
             <Button Grid.Column="1" Grid.Row="0" 
                     Margin="0,0,0,0" 
@@ -92,7 +93,7 @@
                     <TextBlock Text="{StaticResource btn_Edit}" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
-            
+
             <!--Remove BTN-->
             <Button Grid.Column="2" Grid.Row="0" 
                     Margin="5,0,0,0" 
@@ -102,6 +103,13 @@
                     <Image Source="../../Resources/Images/remove_shield.png" Margin="0,0,5,0" MaxHeight="{StaticResource IconMaxHeight}"/>
                     <TextBlock Text="{StaticResource btn_Remove}" VerticalAlignment="Center"/>
                 </StackPanel>
+            </Button>
+
+            <Button Grid.Column="3" Grid.Row="0" Margin="5,0,0,0" Style="{StaticResource DefaultButton}" Command="{Binding ShieldingTab.MoveUpCommand}">
+                ↑ Move Up
+            </Button>
+            <Button Grid.Column="4" Grid.Row="0" Margin="5,0,0,0" Style="{StaticResource DefaultButton}" Command="{Binding ShieldingTab.MoveDownCommand}">
+                ↓ Move Down
             </Button>
         </Grid>
     </Grid>
